# hello-world

./: .gitignore  .gitignore.swp  README.md  a_new_file.txt  anotherTest.md  another_one.txt  asdf.md  my_script.sh  mypy1.py  new.c  nnn.py  one_more.txt  testpull.md
C/: README.md  bit_manip.c  edit_array_in_function.c  file_io.c  ternary.c
ML/: README.md
ML_linear_regression/: file_write_test.py  main.py  model_stats.txt  studentmodel.pickle
assembly/: hello_world_x86.asm
cpp/: a.out  circular_data_buffer.cpp  file_io.cp  main.cpp  move_semantics.cpp  myClasses.cpp  mystrings.cpp  mystrings.h  out  rmspace.cpp  sandbox.cpp  split_char_arr.cpp  split_string.cpp  test.txt  threads.cpp
diffeq/: euler.rs  ode.ipynb
embedded/nano-proto/: Cargo.toml
embedded/nano-proto/.cargo/: config.toml
embedded/nano-proto/src/: atmega328p.rs  main.rs  utils.rs
embedded/nano-proto/test/: test.rs
file-rename-tool/: main.c  test.txt
ftxui-test/: CMakeLists.txt  data.csv
ftxui-test/src/: main.cpp  plot.cpp  plot.hpp
futbol/: README.md  main.py  tempCodeRunnerFile.py
git_test/: README.md  another.py  poop.py
google_drive_py/: README.md  transfer_owner.py
lua/: misc.lua  strings.lua  tables.lua
matmul/: matmul.c  matmul.cpp  matmul.py
ncurses_tutorials/: 0_tutorial.cpp  1_tutorial.cpp  2_tutorial.cpp  3_tutorial.cpp  4_tutorial.cpp  5_tutorial.cpp  Makefile
old_openremote/: README.md
print_dir_contents/: print_dir_contents.c
python/: ansi_colors.py  data_classes.py  dbinfo.py  fileio.py  sine_qt.py  (+3 more)
python-snippets/: easy_serial.py  snippets.ipynb
(+78 files in other folders)
